# claude-sandbox

./: .gitignore  CHANGELOG.md  NOTES.md  README.md  USER_GUIDE.md  pyproject.toml
src/csb/: __init__.py  claude_context.py  claude_settings.py  cleanup.py  cli.py  cli_claude.py  cli_cleanup.py  cli_mcp.py  config.py  devcontainer.py  exceptions.py  mcp.py
src/csb/templates/: Dockerfile  __init__.py
